Begun communicating with the API

--- a/66/index.html
+++ b/66/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Promise API</title>
+    <title>Fetch API</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div><p>There are 6 primary methods in the Promise API</p></div>
+    
 
-    <script src="PromiseAPI.js"></script>
+    <script src="FetchAPI.js"></script>
 </body>
 </html>
