--- a/71/index.html
+++ b/71/index.html
@@ -38,13 +38,7 @@
             <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
             <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
         </div>
-
-
-        <div id="cardContainer" class="row" style="justify-content: center;">
-
-        </div>
-            
-            
+        <div id="cardContainer" class="row" style="justify-content: center;"></div>
     </div>
 
 
